--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="registrate">no tienes cuenta?Registrate</string>
     <string name="ingreso">Ingresar</string>
     <string name="registro">Crear cuenta</string>
+    <string name="iniciar">Inicio Sesion</string>
     <string name="registrousu">Registro de Usuario</string>
     //---------------------hint-------------------
     <string name="email">Email</string>
