--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="registro">Crear cuenta</string>
     <string name="iniciar">Inicio Sesion</string>
     <string name="registrousu">Registro de Usuario</string>
+    <string name="registraso">Registro</string>
     //---------------------hint-------------------
     <string name="email">Email</string>
     <string name="usuarioor">Usuario o Correo</string>
