--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
     <string name="app_name">Rutas Para Moteros</string>
     <string name="login">Login</string>
     <string name="bienvenida">BIENVENIDO A DARKSIDE</string>
-    <string name="registrate">no tienes cuenta?Registrate</string>
+    <string name="registrate">¿No tienes cuenta?</string>
+    <string name="registrate_2">Registrate</string>
     <string name="ingreso">Ingresar</string>
     <string name="registro">Crear cuenta</string>
-    <string name="iniciar">Inicio Sesion</string>
+    <string name="iniciar">Inicio sesión</string>
     <string name="registrousu">Registro de Usuario</string>
     <string name="registraso">Registro</string>
     //---------------------hint-------------------
