Añadir el olvide mi contraseña

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="garaje">Garaje</string>
     <string name="garajedos">¿Hoy en que viajaras?</string>
     <string name="top">Top Rutas</string>
+    <string name="olvide_mi_contrasena">Olvide mi contraseña</string>
 
 
 </resources>
