Finalizacion del layout presupuesto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,28 @@
     <string name="txt_hotel_los_farallones">Hotel los farallones</string>
     <string name="txt_35_000">$35.000</string>
     <string name="txt_92_750">$92.750</string>
+    <string name="txt_comida">Comida</string>
+    <string name="txt_1_porci_n">1/Porción</string>
+    <string name="txt_pio_pio">Pio pio</string>
+    <string name="txt_40_500">$40.500</string>
+    <string name="txt_carantanta">Carantanta</string>
+    <string name="txt_10_000">$10.000</string>
+    <string name="txt_25_250">$25.250</string>
+    <string name="txt_30_000">$30.000</string>
+    <string name="txt_9_484">$9.484</string>
+    <string name="txt_cali">Cali</string>
+    <string name="txt_15_200">$15.200</string>
+    <string name="txt_popay_n">Popayán</string>
+    <string name="txt_1_gal_n">1/Galón</string>
+    <string name="txt_gasolina">Gasolina</string>
+    <string name="txt_recreaci_n">Recreación</string>
+    <string name="txt_1_persona">1/Persona</string>
+    <string name="txt_5_500">$5.500</string>
+    <string name="txt_gratis">Gratis</string>
+    <string name="txt_salvajina">Salvajina</string>
+    <string name="txt_10_500">$10.500</string>
+    <string name="txt_totoro">Totoro</string>
+    //---------------------------------------------
 
     //---------------------------------------------
 
