Avance del aplicativo 1.0, lo demas se realizara pronto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,9 @@
     <string name="txt_salvajina">Salvajina</string>
     <string name="txt_10_500">$10.500</string>
     <string name="txt_totoro">Totoro</string>
+    <string name="txt_tienes_cuenta">¿Tienes cuenta?</string>
+    <string name="txt_inicia_sesi_n">Inicia sesión</string>
+    <string name="btn_back"><![CDATA[<]]></string>
     //---------------------------------------------
 
     //---------------------------------------------
